--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "precommit": "yarn build",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "eslint": "^4.19.1",
+    "husky": "^0.14.3",
     "tslint-eslint-rules": "^5.3.1",
     "typescript": "^2.8.4"
   },
