--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "precommit": "yarn build",
+    "pre-add": "echo 123",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
